# quantum-som

./: .coverage  QISKIT_2.0_UPDATE.md  README.md  example_usage.py  pyproject.toml  qsom_enhanced.py  qsom_implementation.py  requirements.txt
.github/workflows/: ci.yml
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  theory.rst
docs/source/api/: backend.rst  error_mitigation.rst  gpu.rst  ibm_jobs.rst  shadows.rst  som.rst  visualization.rst
examples/: breast_cancer_qsom.py  heisenberg_qsom.py  iris_qsom.py
notebooks/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
src/qsom/: __init__.py  backend.py  benchmarks.py  clifford_shadows.py  error_mitigation.py  gpu.py  ibm_jobs.py  py.typed  shadows.py  som.py  sparse.py  utils.py  visualization.py
src/qsom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_backend.py  test_integration.py  test_shadows.py  test_som.py
